<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessActivity">

    <TextView
        android:id="@+id/textViewChances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_5_chances_left"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/increase"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChances"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelp" />

    <Button
        android:id="@+id/buttonGuess"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/guess"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>